# discord-bot

./: Cargo.toml  LICENCE  README.md
src/: command.rs  main.rs
src/sources/: youtube.rs
src/structs/: audio_link.rs  context_data.rs  mod.rs
