[package]
name = "dc-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3
debug = 1

[dependencies]
anyhow = "1.0.79"
dotenvy = "0.15.7"
reqwest = "0.11.24"
serenity = { version = "0.12", features = ["voice"] }
songbird = "0.4.0"
symphonia = { version = "0.5.3", features = ["all"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
