[package]
name = "dc-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3
debug = 1

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
dashmap = "5.5.3"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
poise = "0.6.1"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.113"
serenity = { version = "0.12", features = ["voice"] }
songbird = "0.4.0"
symphonia = { version = "0.5.3", features = ["all"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1.3"
